--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "title": "Stylie Modals",
   "name": "stylie.modals",
   "description": "Stylie Modal Windows, a CommonJS/browserify port of http://tympanus.net/codrops/?p=15313",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "engines": {
     "node": ">=0.10.x"
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:typesettin/ts.component.modals.git"
+    "url": "git@github.com:typesettin/stylie.modals.git"
   },
   "dependencies": {
     "classie": ">=0.1.0",
